# IRIS_Control_Center

./: IRIS Control Center.bat  README.md  pyproject.toml
src/: control_page.py  login_page.py  main.py  mappings.py
